Ensure e-mail address is visible

--- a/main.css
+++ b/main.css
@@ -36,6 +36,7 @@ html {
 
 main {
   height: 100%;
+  overflow-x: hidden;
   overflow-y: auto;
   scroll-behavior: smooth;
 }
@@ -62,12 +63,12 @@ td {
   padding-bottom: 1rem;
 }
 
-#tarifs td:first-child {
-  width: 80%;
-}
-
 td + td {
   padding-left: 1rem;
+}
+
+#contact {
+  overflow-x: scroll;
 }
 
 #introduction {
@@ -99,6 +100,10 @@ td + td {
   background-color: #fff;
   color: #000;
   font-weight: bold;
+}
+
+#tarifs td:first-child {
+  width: 80%;
 }
 
 .animate {
